z-index fix
z-index fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2579,6 +2579,7 @@
 		z-index: 5;
 		width: 100%;
 		margin: 0 auto;
+		position: relative;
 		padding: 0 2em;
 		opacity: 1;
 		filter: none;
